--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,31 @@
 .titre-page{
     color:purple;
     text-align:center;
-    font-size:30px;
+    font-size:40px;
+}
+.titre-mediavea,.titre-telmusique{
+    color:#EEC0BF;
+    font-size: 35px;
+    text-align: center;
+}
+
+.titre-mediavea{
+    margin-top:2%;
+}
+
+.titre-telmusique{
+    margin-top: 5%;
+}
+.site-picture,.picture-mediavea,.picture-telmusique{
+    
+    /*border-color:red;
+    border-style:solid;*/
+    width:700px;
+    height:600px;
+    margin: 0 auto;
+    border-style:solid;
+    border-color:rgba(0, 0, 255, .2);
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+    
+    
 }
