--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,14 @@
     
     font-size:45px;
 }
+/* Titre des sections */
 .titre-mediavea,.titre-telmusique{
     color:#EEC0BF;
     font-size: 35px;
     text-align: center;
 }
 
+/* MARGE DES SECTIONS */
 .titre-mediavea{
     margin-top:3%;
 }
@@ -19,6 +21,8 @@
 .titre-telmusique{
     margin-top: 5%;
 }
+
+/* ELEMENTS QUI CORRESPOND AUX IMAGES  */
 .site-picture,.picture-mediavea,.picture-telmusique{
     
     /*border-color:red;
@@ -33,3 +37,34 @@
     
 }
 /* RESPONSIVE*/
+/* Smartphone */
+@media screen and (max-width:600px){
+
+    /* TITRE DES SECTIONS */
+    .titre-mediavea, .titre-telmusique{
+        font-size:32px;
+        margin-top:6%;
+    }
+
+    /* ELEMENT QUI CORRESPOND AUX IMAGES */
+    .site-picture,.picture-mediavea,.picture-telmusique{
+        width:400px;
+         height:400px;
+    }
+}
+
+@media screen and (min-width:601px) and (max-width:660px){
+
+    /* TITRE DES SECTIONS */
+    .titre-mediavea, .titre-telmusique{
+        font-size:35px;
+        margin-top:6%;
+    }
+
+    /* ELEMENTS QUI CORRESPOND AUX IMAGES */
+    .site-picture,.picture-mediavea,.picture-telmusique{
+        width:500px;
+         height:500px;
+    }
+}
+
